relative paths, preformat json, screendump

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
-        <link rel="stylesheet" href="/css/styles.css" type="text/css">
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
 
-        <script type="text/javascript" src="/js/ruminator.js"></script>
+        <script type="text/javascript" src="js/ruminator.js"></script>
 
     </head>
     <body>
@@ -66,11 +66,11 @@
                 </div>
                 <div class="col-md-1">
                     <a class="cowbutton" href="#" id="left" title="read json into form">
-                        <img style="width:70px;" src="/img/cow-left-light.png" />
+                        <img style="width:70px;" src="img/cow-left-light.png" />
                     </a>
 
                     <a class="cowbutton" href="#" id="right" title="create json from form">
-                        <img style="width:70px;" src="/img/cow-right-light.png" />
+                        <img style="width:70px;" src="img/cow-right-light.png" />
                     </a>
                     
                 </div>
