less datatypes, prefixed, appendable

--- a/index.html
+++ b/index.html
@@ -95,47 +95,11 @@
           <div class="columncontent">
             <select class="form-control attribute" name="datatype">
               <option value="">no datatype</option>
-              <option>xsd:anyURI</option>
-              <option>xsd:base64Binary</option>
-              <option>xsd:boolean</option>
-              <option>xsd:byte</option>
-              <option>xsd:date</option>
-              <option>xsd:dateTime</option>
+              <option>xsd:string</option>
               <option>xsd:decimal</option>
-              <option>xsd:double</option>
-              <option>xsd:duration</option>
               <option>xsd:float</option>
-              <option>xsd:gDay</option>
-              <option>xsd:gMonth</option>
-              <option>xsd:gMonthDay</option>
-              <option>xsd:gYear</option>
-              <option>xsd:gYearMonth</option>
-              <option>xsd:hexBinary</option>
-              <option>xsd:ID</option>
-              <option>xsd:IDREF</option>
-              <option>xsd:IDREFS</option>
-              <option>int</option>
               <option>xsd:integer</option>
-              <option>xsd:language</option>
-              <option>xsd:long</option>
-              <option>xsd:Name</option>
-              <option>xsd:NCName</option>
-              <option>xsd:negativeInteger</option>
-              <option>xsd:NMTOKEN</option>
-              <option>xsd:NMTOKENS</option>
-              <option>xsd:nonNegativeInteger</option>
-              <option>xsd:nonPositiveInteger</option>
-              <option>xsd:normalizedString</option>
-              <option>xsd:positiveInteger</option>
-              <option>xsd:QName</option>
-              <option>xsd:short</option>
-              <option>string</option>
-              <option>xsd:time</option>
-              <option>xsd:token</option>
-              <option>xsd:unsignedByte</option>
-              <option>xsd:unsignedInt</option>
-              <option>xsd:unsignedLong</option>
-              <option>xsd:unsignedShort</option>
+              <option>xsd:gYear</option>
             </select>
 
             <input class="form-control attribute" type="text" name="lang" value="" placeholder="language, e.g. 'en', 'nl' - only needed when datatype is string" />
@@ -161,47 +125,11 @@
           <div class="columncontent">
             <select class="form-control attribute" name="datatype">
               <option value="">no datatype</option>
-              <option>xsd:anyURI</option>
-              <option>xsd:base64Binary</option>
-              <option>xsd:boolean</option>
-              <option>xsd:byte</option>
-              <option>xsd:date</option>
-              <option>xsd:dateTime</option>
+              <option>xsd:string</option>
               <option>xsd:decimal</option>
-              <option>xsd:double</option>
-              <option>xsd:duration</option>
-              <option>float</option>
-              <option>xsd:gDay</option>
-              <option>xsd:gMonth</option>
-              <option>xsd:gMonthDay</option>
-              <option>xsd:gYear</option>
-              <option>xsd:gYearMonth</option>
-              <option>xsd:hexBinary</option>
-              <option>xsd:ID</option>
-              <option>xsd:IDREF</option>
-              <option>xsd:IDREFS</option>
-              <option>int</option>
+              <option>xsd:float</option>
               <option>xsd:integer</option>
-              <option>xsd:language</option>
-              <option>xsd:long</option>
-              <option>xsd:Name</option>
-              <option>xsd:NCName</option>
-              <option>xsd:negativeInteger</option>
-              <option>xsd:NMTOKEN</option>
-              <option>xsd:NMTOKENS</option>
-              <option>xsd:nonNegativeInteger</option>
-              <option>xsd:nonPositiveInteger</option>
-              <option>xsd:normalizedString</option>
-              <option>xsd:positiveInteger</option>
-              <option>xsd:QName</option>
-              <option>xsd:short</option>
-              <option>string</option>
-              <option>xsd:time</option>
-              <option>xsd:token</option>
-              <option>xsd:unsignedByte</option>
-              <option>xsd:unsignedInt</option>
-              <option>xsd:unsignedLong</option>
-              <option>xsd:unsignedShort</option>
+              <option>xsd:gYear</option>
             </select>
 
             <input class="form-control attribute" type="text" name="lang" value="" placeholder="language, e.g. 'en', 'nl' - only needed when datatype is string" />
